<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay_scrim"
    android:padding="@dimen/space_l">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/space_l">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_mission_title"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/cancel_mission_body"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_body" />

        <EditText
            android:id="@+id/etReason"
            style="@style/Input.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:gravity="top|start"
            android:hint="@string/cancel_mission_reason_hint"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <Button
            android:id="@+id/btnKeep"
            style="@style/Button.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/cancel_mission_keep" />

        <Button
            android:id="@+id/btnConfirmCancel"
            style="@style/Button.Danger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/cancel_mission_confirm" />
    </LinearLayout>
</FrameLayout>
