<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay_scrim"
    android:padding="@dimen/space_l">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/space_l">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_shift_title"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/end_shift_body"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_body" />

        <Button
            android:id="@+id/btnStay"
            style="@style/Button.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/end_shift_stay" />

        <Button
            android:id="@+id/btnEnd"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/end_shift_confirm" />
    </LinearLayout>
</FrameLayout>
