<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCC62828"
    android:padding="@dimen/space_l">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/space_l">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/panic_title"
            android:textColor="@color/urgent_alert"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:text="@string/panic_body"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_body" />

        <Button
            android:id="@+id/btnCancelAlert"
            style="@style/Button.Danger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/panic_cancel_button" />
    </LinearLayout>
</FrameLayout>
