<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay_scrim"
    android:padding="@dimen/space_l">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/space_l">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_m"
            android:text="@string/settings_choose_language"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/tap_target_min"
                android:gravity="center_vertical"
                android:text="@string/lang_english"
                android:textSize="@dimen/text_body"
                android:textColor="@color/text_primary" />

            <RadioButton
                android:id="@+id/radioArabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/tap_target_min"
                android:gravity="center_vertical"
                android:text="@string/lang_arabic"
                android:textSize="@dimen/text_body"
                android:textColor="@color/text_primary" />
        </RadioGroup>

        <Button
            android:id="@+id/btnApplyLanguage"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:text="@string/generic_apply" />
    </LinearLayout>
</FrameLayout>
